--- a/TestDemo/WebContent/WEB-INF/web.xml
+++ b/TestDemo/WebContent/WEB-INF/web.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>TestDemo/html/LandingPage.html</display-name>
-  <welcome-file-list>
-    <welcome-file>html/LandingPage.html</welcome-file>
-    </welcome-file-list>
-    
-    
+  <display-name>TestDemo</display-name>
+   <welcome-file-list>
+    <welcome-file>LandingPage.html</welcome-file>
+  </welcome-file-list>
+  <servlet-mapping>
+  		<servlet-name>ServController</servlet-name>
+  		<url-pattern>/register</url-pattern>
+  </servlet-mapping>
+  <servlet>
+  <servlet-name>ServController</servlet-name>
+  <servlet-class>com.controller.ServController</servlet-class>
+  </servlet>
+  
 </web-app>
